# atalaya

./: .gitignore  IPP.md  LICENSE  README.md
.claude/: settings.local.json
backend/: pyproject.toml
docs/: SDD.md  SRS.md
frontend/: .prettierrc  package.json  vite.config.js
