[project]
name = "atalaya"
version = "0.1.0"
description = "Aplicación web local para monitorear métricas del sistema (CPU, RAM, disco)."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "../LICENSE" }
authors = [{ name = "Rafa Watson" }]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[project.scripts]
atalaya = "atalaya.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/atalaya"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
    "pyinstaller>=6.11",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["src"]
